# ai-news-aggregator

./: README.md  main.py  pyproject.toml
app/: config.py  example.env  runner.py
app/agent/: summarizer.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/scrapers/: news.py  youtube.py
app/scrappers/: policepress.py  youtube.py
app/services/: process_digest.py  process_youtube.py
docker/: docker-compose.yaml
